--- a/BMI_calculator/settings.gradle
+++ b/BMI_calculator/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "IBM_calculator"
+rootProject.name = "BMI_calculator"
 include ':app'
